<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MealMate</string>
    
    <!-- Main Fragment -->
    <string name="app_title">Gelsin</string>
    <string name="search_hint">Yemek ara...</string>
    
    <!-- Detail Fragment -->
    <string name="product_detail">Ürün Detayı</string>
    <string name="add_to_cart">Sepete Ekle</string>
    <string name="favorite_button">Favorilere Ekle</string>
    <string name="close_button">Kapat</string>
    
    <!-- Cart Fragment -->
    <string name="my_cart">Sepetim</string>
    <string name="cart_empty">Sepetiniz Boş</string>
    <string name="delivery_fee">Teslimat Ücreti</string>
    <string name="free_delivery">Ücretsiz</string>
    <string name="total">Toplam</string>
    <string name="confirm_cart">Siparişi Onayla</string>
    
    <!-- Favorites Fragment -->
    <string name="favorites">Favorilerim</string>
    <string name="favorites_empty">Favori Ürününüz Yok</string>
    
    <!-- Profile Fragment -->
    <string name="user_name">Kullanıcı Adı</string>
    <string name="user_email">kullanici@email.com</string>
    <string name="change_avatar">Profil Fotoğrafını Değiştir</string>
    <string name="logout">Çıkış Yap</string>
</resources>